SJB 2012-11-28:
bin/sos_filesequencer: don't process arc/flat/science for cart<10
  to protect BOSS from MaNGA tests.  Process dark/bias from any cart
  to allow afternoon checkout tests while APOGEE carts are loaded.

-------------------------------------------------------------------------------
v5_6_0 (2012-11-16) Tag to reprocess all data; starts a new season toward DR11

ASB 2012-11-15: Added MATCH_SPALL (routine) and
  CHECK_CMASS_CHANGES (script) in pro/testsuite

SJB 2012-11-02:
  SDSSPROC : Added warning for readnoise<1.0 which could mean
             CCD voltages are wrong

SJB 2012-10-28: reformat_spectra.py - Added x column to exp HDUs of spec files.

-------------------------------------------------------------------------------
v5_5_12 (2012-10-23) -- DR10 release candidate

SJB 2012-10-23:
SPREDUCE2D: add photolog_version to log output
SPCOADD_V5: add EXTNAME keywords to spCFrame and spPlate files

JB 2012-10-22:
PLATEMERGE, SPREDUCE1D: Add CAS-styled specobjid to spreduce1d output

ASB 2012-10-20:
FLUX_DISTORTION, SPREDUCE1D: call SDSS_ASTROMBAD rather than looking
for CALIB_STATUS bit to flag bad fields.  (Ticket #1583).

MDO 2012-10-09:
SDSSPROC: add case to check if saturated pixel occurs within 3 pixels of top and bottom of image.  (Ticket $1424)

SJB 2012-10-09:
opfiles/washers.par: remove duplicate entry 3537-55116

-------------------------------------------------------------------------------
v5_5_11 (2012-10-04) -- dry run for DR10

ASB 2012-10-04:
PLATEMERGE: Added BOSSPRIMARY tag to replicate SPECPRIMARY but to be
    immune from downstream modification; changed SPECOBJ_ID to
    BOSS_SPECOBJ_ID (Ticket #1634).

SJB 2012-10-04:
COMBINE1FIBER: only set NODATA in AND_MASK if there really is no data
    on any input spectrum; resolves ticket 1301.

SJB 2012-10-03:
BATCHPBS: Added /skip1d option
Added bin/copy_spPlan.py

SJB 2012-10-02:
PLATEMERGE: removed Z_PERSON, CLASS_PERSON, Z_CONF_PERSON,